fix: image should not overlap with right sidebar

--- a/src/release-notes/ReleaseNotes.scss
+++ b/src/release-notes/ReleaseNotes.scss
@@ -99,6 +99,12 @@
         align-self: flex-start;
     }
 
+    img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+    }
+
     video,
     iframe {
         width: 100%;
